--- a/Nuestro_equipo.html
+++ b/Nuestro_equipo.html
@@ -39,7 +39,6 @@
 </header>
 <body>
     <div id="container">
-        Hola equipo
     </div>
 </body>
 <footer>
@@ -57,4 +56,5 @@
 </footer>
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="/JS/contacto.js"></script>
 </html> 
