--- a/Nuestro_equipo.html
+++ b/Nuestro_equipo.html
@@ -23,7 +23,7 @@
             <a id="nav-menu" href="#">Cotizar</a>
         </div>
         <!--Cuadro del logo-->
-        <div id="logo">
+        <div id="logoContainer">
             <img id="logo" src="images/logos/logoEmp.webp" alt="Logo click | a un click del exito">
         </div>
         <!--Cuadro de redes sociales-->
