--- a/Nuestro_equipo.html
+++ b/Nuestro_equipo.html
@@ -16,20 +16,20 @@
 </head>
 <header>
     <!--div del menu de navegaciòn-->
-    <div id="nav-bar">
+    <div class="nav-bar">
         <!--div menu de navegacion-->
         <div class="etiquetas">
             <!--butones menu de navgacion-->
-            <a id="nav-menu" href="#">Nuestro equipo</a>
-            <a id="nav-menu" href="#">Nuestro Trabajo</a>
-            <a id="nav-menu" href="#">Cotizar</a>
+            <a class="nav-menu" href="#">Nuestro equipo</a>
+            <a class="nav-menu" href="#">Nuestro Trabajo</a>
+            <a class="nav-menu" href="#">Cotizar</a>
         </div>
         <!--Cuadro del logo-->
-        <div id="logoContainer">
-            <img id="logo" src="Image/logos/logoEmp.webp" alt="Logo click | a un click del exito">
+        <div class="logoContainer">
+            <img class="logo" src="Image/logos/logoEmp.webp" alt="Logo click | a un click del exito">
         </div>
         <!--Cuadro de redes sociales-->
-        <div id="redes">
+        <div class="redes">
             <ul class="redesicon">
                 <li><a href="#"><ion-icon name="logo-facebook"></ion-icon> </a></li>
                 <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
@@ -40,21 +40,23 @@
     </div>
 </header>
 <body>
+    <Img class="Office" src="/Image/fondos/A un Click del Éxito.png" alt="oficina de clicker"></Img>
     <div class="container">
+        <h1 class="page-title">Nuestro Equipo</h1>
+        <div class="line"></div>
         <div class="person">
             <div class="box-image">
-                <img src="" alt="Imagen persona">
+                <img src="/Image/Recursos/imagen_persona_ejemplo.jpg" alt="Imagen persona">
             </div>
             <div class="info">
-                <h1 class="name">persona</h1>
-                <h2 class="position"></h2>
-                <p class="description"></p>
-                <div class="redes">
+                <h1 class="name">Nombre de ejemplo</h1>
+                <h2 class="position">Posicion de trabajo</h2>
+                <div class="line"></div>
+                <div class="des" id="description" data-nombre="Persona Ejemplo 1"></div>
+                <div>
                     <ul class="redes-person">
-                        <li><a href="#"><ion-icon name="logo-facebook"></ion-icon> </a></li>
-                        <li><a href="#"><ion-icon name="logo-instagram"></ion-icon></a></li>
-                        <li><a href="#"><ion-icon name="logo-tiktok"></ion-icon>   </a></li>
-                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon> </a></li>
+                        <li><a href="#"><ion-icon name="logo-github"></ion-icon>  </a></li>
+                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
                     </ul>
                 </div>
             </div>
@@ -69,13 +71,14 @@
         <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon> </a></li>
     </ul>
     <ul class="menuf">
-        <a id="nav-menu" href="#">Nuestro equipo</a>
-        <a id="nav-menu" href="#">Nuestro Trabajo</a>
-        <a id="nav-menu" href="#">Cotizar</a>
+        <a class="nav-menu" href="#">Nuestro equipo</a>
+        <a class="nav-menu" href="#">Nuestro Trabajo</a>
+        <a class="nav-menu" href="#">Cotizar</a>
     </ul>
 </footer>
 <!--JavaScript funcionasmiento-->
-
+    <!--JavaScript para cargar descripciones-->
+    <script src="JS/CargarDescripciones.js"></script>
 <!--LInk Para los iconos-->
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
