--- a/Nuestro_equipo.html
+++ b/Nuestro_equipo.html
@@ -44,24 +44,8 @@
     <div class="container">
         <h1 class="page-title">Nuestro Equipo</h1>
         <div class="line"></div>
-        <div class="person">
-            <div class="box-image">
-                <img src="/Image/Recursos/imagen_persona_ejemplo.jpg" alt="Imagen persona">
-            </div>
-            <div class="info">
-                <h1 class="name">Nombre de ejemplo</h1>
-                <h2 class="position">Posicion de trabajo</h2>
-                <div class="line"></div>
-                <div class="des" id="description" data-nombre="Persona Ejemplo 1"></div>
-                <div>
-                    <ul class="redes-person">
-                        <li><a href="#"><ion-icon name="logo-github"></ion-icon>  </a></li>
-                        <li><a href="#"><ion-icon name="logo-linkedin"></ion-icon></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
+        <!--Cuadros de la personas-->
+        <div class="person" id="person" data-nombre="Persona Ejemplo 1" onload=""></div></div>
 </body>
 <footer>
     <ul class="redesicon">
