--- a/Proyecto/proyectoBase.html
+++ b/Proyecto/proyectoBase.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Base</title>
     <!--Estilos-->
-    <link rel="stylesheet" href="CSS/styleBase.css">
+    <link rel="stylesheet" href="CSS/proyectoStyleBase.css">
 </head>
 <body>
     <header>
@@ -33,12 +33,39 @@
         </div>
     </header>
     <footer>
+        <div>
         <div class="footerContainer">
-            
+            <div class="divLogoFooter">
+                <img src="" alt="">
+            </div>
+            <div class="divInfoContactoFooter">
+                <p>ContactoCLicker@ejemplo.com</p>
+                <p>+(506) 8575-4896</p>
+                <p>En tu imaginacion bebe</p>
+            </div>
+            <div class="divRedesFooter">
+                <a><ion-icon name="logo-tiktok"></ion-icon></a>
+                <a><ion-icon name="logo-facebook"></ion-icon></a>
+                <a><ion-icon name="logo-twitch"></ion-icon></a>
+                <a><ion-icon name="logo-youtube"></ion-icon></a>
+            </div>
+            <div class="divMenuNavegacionFooter">
+                <ul class="linkMenuNavegacionFooter">
+                    <li><a href="#" class="paginaActual_">Registro</a></li>
+                    <li><a href="#">Gu&iacutea de juego</a></li>
+                    <li><a href="#">Ajustes</a></li>
+                    <li><a href="#">Social</a></li>
+                    <li><a href="duelos.html">Duelos</a></li>
+                    <li><a href="#">Estad&iacutesticas de juego</a></li>
+                    <li><a href="#">Rangos</a></li>
+                    <li><a href="#">Acerca de nosotros</a></li>
+                </ul>
+            </div>
         </div>
         <div class="divFooterCopy">
             <p>&copy; Copyright Clicker 2024</p>
         </div>
+    </div>
     </footer>
     <!--Ion icon link-->
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
