Acomodo Proyecto iteracion 1

--- a/ProyectoBase.html
+++ b/ProyectoBase.html
@@ -29,14 +29,15 @@
             <!--se referencia a la pagina de perfil-->
         </div>
         <div>
-            <a href="index.html"><img src="Image/logos/logoPokemon.png" alt="LogoPokemon" class="logoMenuPokemon"></a>
+            <a href="index.html"><img src="IMAGE/logos/logoPokemon.webp" alt="LogoPokemon" class="logoMenuPokemon"></a>
         </div>
     </header>
+    <div class="contenidoPagina"></div>
     <footer>
         <div>
         <div class="footerContainer">
             <div class="divLogoFooter">
-                <img src="" alt="">
+                <img src="IMAGE/logos/clickerLogoCompletoBlanco.webp">
             </div>
             <div class="divInfoContactoFooter">
                 <p>ContactoCLicker@ejemplo.com</p>
