iteracion 1 martes noche

--- a/landingNuestroEquipo.html
+++ b/landingNuestroEquipo.html
@@ -22,8 +22,8 @@
             <div class="etiquetas">
                 <!--butones menu de navgacion-->
                 <a class="nav-menu" href="#">Nuestro equipo</a>
-                <a class="nav-menu" href="#">Nuestro Trabajo</a>
-                <a class="nav-menu" href="#">Cotizar</a>
+                <a class="nav-menu" href="landingNuestroTrabajo.html">Nuestro Trabajo</a>
+                <a class="nav-menu" href="/landingCotizar.html">Cotizar</a>
             </div>
             <!--Cuadro del logo-->
             <div class="logoContainer">
@@ -44,11 +44,7 @@
     <div class="container">
         <h1 class="page-title">Nuestro Equipo</h1>
         <div class="line"></div>
-        <!--Cuadros de la personas-->.box-image img{
-    max-width:300; min-width: 300px; 
-    max-height: 480px; min-height: 480px;
-    transform: translateX(10px) translateY(20px);
-}
+        <!--Cuadros de la personas-->
         <div class="divCuadroPersonaLanding" id="CuadroPersonaLanding" data-nombre="Persona Ejemplo 1"></div>
     </div>
     <footer>
